--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -33,8 +33,8 @@ jobs:
 
       - name: Build cryptest Solution
         run: |
-          msbuild cryptest.sln -property:Configuration=Debug,MultiProcessorCompilation=true -maxCpuCount -verbosity:minimal -noLogo
-
+          msbuild cryptest.sln -property:Configuration=Debug,Platform=x64,MultiProcessorCompilation=true -maxCpuCount -verbosity:minimal -noLogo
+      
       - name: Display tree structure of POST build
         run: tree /f /a .
         
